--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		 <title>index</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+		
+	
+
+<script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
@@ -17,18 +21,23 @@
 </div>
 
 	<nav class="navbar">
+		<div class="max-width">
     <div class="logo">Portfo<span>lio</span></div>
+    	
     	<ul class="menu">
     		<li><a href="#Home">Home</a></li>
     			<li><a href="#About">About</a></li>
     				<li><a href="#contact">Contact</a></li>
     			</ul>
- 
+    			 <div class="menu-btn">
+ 	        <i class="fas fa-bars"></i>
+            </div>
+           </div>
 
    </nav>
   
   <section class="content" id="Home">
-   
+   <div class="max-width">
 <h3 class="heading">Hello my name is</h3>
  
  <h4 class="heading2">Vignesh</h4>
@@ -50,6 +59,7 @@
 
   </div>
  </div>
+</div>
  </section>
  
  <section class="About" id="About">
@@ -60,7 +70,7 @@
  	<div class="right">
  	<div class="text"> I'm a<span> Jobseeker</span>
  		<p class="para">Wanna hire Fresher who is already skilled in Web Technologies. If yes, I Think it's <span>Easy go</span> for you to recruit me for a right role.It saves your time too!</p> 
- 		<a class="download"href ="#">Download CV</a>
+ 		<a class="download"href ="images/Webfinal.docx" download>Download CV</a>
  		</div>
  		<div class="skills">
  		<div class="info">
@@ -159,7 +169,7 @@
  </div>
 </section>
 <footer>
-	<span>Created by <a href="#">VIGNESH</a><span class="far fa-copyright"></span>2022 all rights reserved.</span>
+	<span>Created by <a href="#">VIGNESH</a>&nbsp<span class="far fa-copyright">&nbsp</span>2022 all rights reserved.</span>
 </footer>
 
 <script src="script.js"></script>
