--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<html>
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		 <title>index</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		
@@ -70,7 +70,7 @@
  	<div class="right">
  	<div class="text"> I'm a<span> Jobseeker</span>
  		<p class="para">Wanna hire Fresher who is already skilled in Web Technologies. If yes, I Think it's <span>Easy go</span> for you to recruit me for a right role.It saves your time too!</p> 
- 		<a class="download"href ="images/Webfinal.docx" download>Download CV</a>
+ 		<a class="download"href ="images/Last resume.pdf" download>Download CV</a>
  		</div>
  		<div class="skills">
  		<div class="info">
@@ -111,7 +111,7 @@
 	<h3 class="touch">Get in Touch</h3>
  		<p class="pcontact">You can contact me through this for anything..!</p>
  			
- 				<div class="row">
+ <div class="row">
        <i class ="fas fa-user-alt"></i>
        <div class="info">
        	<div class="head">Name</div>
@@ -159,7 +159,7 @@
 <textarea cols="30" rows="10" name="message"  placeholder="Describe your project.."></textarea>
  </div>
 <div class="button">
-	<button type="submit"> Send message</button>
+	<button type="submit">Send message</button>
 </div>
 
 
